--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+paper*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -130,3 +131,6 @@ dmypy.json
 
 # Vim subfiles
 *.swp
+
+# removable directories
+delete/
